--- a/9.串口通信/Objects/uart.build_log.htm
+++ b/9.串口通信/Objects/uart.build_log.htm
@@ -18,21 +18,17 @@ Hex Converter:   OH51.exe V2.7.0.0
 CPU DLL:         S8051.DLL V3.113.0.0
 Dialog DLL:      DP51.DLL V2.64.0.0 
 <h2>Project:</h2>
-E:\Microcomputer\MyProject\8.定时器\timer.uvproj
+E:\Microcomputer\MyProject\9.串口通信\uart.uvproj
 Project File Date:  09/08/2019
 
 <h2>Output:</h2>
 Build target 'Target 1'
 compiling main.c...
 linking...
-*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
-    SEGMENT: ?PR?LED_ALL_ON?MAIN
-*** WARNING L16: UNCALLED SEGMENT, IGNORED FOR OVERLAY PROCESS
-    SEGMENT: ?PR?_DELAY_MS?BSTV51
-Program Size: data=11.0 xdata=0 code=267
-creating hex file from ".\Objects\timer"...
-".\Objects\timer" - 0 Error(s), 2 Warning(s).
-Build Time Elapsed:  00:00:01
+Program Size: data=9.0 xdata=0 code=83
+creating hex file from ".\Objects\uart"...
+".\Objects\uart" - 0 Error(s), 0 Warning(s).
+Build Time Elapsed:  00:00:00
 </pre>
 </body>
 </html>
